--- a/Topic1/About.html
+++ b/Topic1/About.html
@@ -19,37 +19,31 @@
     />
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
+    <!-- Internal CSS -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
     <!--Main Navigation-->
-<header>
-
-    </nav>
-    <!-- Navbar -->
-  
-    <!-- Heading -->
-    <div class="p-5 bg-light mb-4">
-      <h1 class="">SMAN 11 Library</h1>
-      <!-- Breadcrumb -->
-      <nav class="d-flex">
-        <h6 class="mb-0">
-          <a href="index.html" class="text-reset">Home</a>
-          <span>/</span>
-          <a href="About.html" class="text-reset">About</a>
-          <span>/</span>
-          <a href="Books.html" class="text-reset"><u>Books</u></a>
-        </h6>
-      </nav>
-      <!-- Breadcrumb -->
-    </div>
-    <!-- Heading -->
+    <header>
+      <div class="p-5 bg-light mb-4">
+        <h1 class="">About SMAN 11 Jakarta Library</h1>
+        <nav class="d-flex">
+          <h6 class="mb-0">
+            <a href="index.html" class="text-reset">Home</a>
+            <span>/</span>
+            <a href="About.html" class="text-reset">About</a>
+            <span>/</span>
+            <a href="Books.html" class="text-reset">Book List</a>
+          </h6>
+        </nav>
+        <img src="sman11jktlogo.png" alt="Logo SMAN 11 Jakarta" class="logo">
+      </div>
   </header>
-  <!--Main Navigation-->
 
   <div>
     <div class="container">
-        <p>The Digital Library project at SMAN 11 Jakarta, developed by <b>Muhammad Arkan</b> and <b>Anggun Minto</b>, is an innovative initiative aimed at enhancing access to educational and research resources for students and staff at the school. This project integrates modern technology to create a more dynamic and responsive learning environment.
+        <p>The Digital Library project at SMAN 11 Jakarta, developed by <b>Muhammad Arkan</b> and <b>Anggun Minto Prayogo</b>, is an innovative initiative aimed at enhancing access to educational and research resources for students and staff at the school. This project integrates modern technology to create a more dynamic and responsive learning environment.
 
             Here are some key components and features that might be present in the Digital Library project at SMAN 11 Jakarta:</p>
         <li><b>Content Management System:</b></li><p>The project may use a content management system or a digital library platform that allows users to easily search, discover, and access digital resources. This system can be customized to catalog various types of materials, including e-books, academic journals, and learning materials.</p>
